@@ -1,10 +1,14 @@
 package org.opencds.cqf.fhir.cr.measure.common;
 
+import static org.opencds.cqf.fhir.cql.ClassInstanceHelper.convertToFhirR4IfNeeded;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
+import org.opencds.cqf.cql.engine.runtime.ClassInstance;
+import org.opencds.cqf.fhir.cql.ClassInstanceHelper;
 
 /**
  * Various FHIR version-agnostic utilities for working with Stratifiers.
@@ -15,24 +19,40 @@ public class StratifierUtils {
         // Static utility class
     }
 
-    public static List<Class<?>> extractClassesFromSingleOrListResult(Object result) {
-        if (result == null) {
+    public static List<String> extractClassesFromSingleOrListResult(CqlExpressionValue value) {
+        if (value.isNull()) {
             return Collections.emptyList();
         }
 
-        if (result instanceof Class<?> clazz) {
-            return List.of(clazz);
+        Object raw = value.raw();
+        if (raw instanceof Class<?> clazz) {
+            return List.of(clazz.getName());
         }
 
-        if (!(result instanceof Iterable<?> iterable)) {
-            return List.of(result.getClass());
+        if (!value.isIterable()) {
+            if (raw instanceof ClassInstance classInstance) {
+                return List.of(ClassInstanceHelper.getClassName(classInstance));
+            } else if (raw instanceof org.opencds.cqf.cql.engine.runtime.Boolean) {
+                return List.of(org.opencds.cqf.cql.engine.runtime.Boolean.class.getName());
+            }
+            return Collections.emptyList();
         }
 
-        // Need to this to return List<Class<?>> and get rid of Sonar warnings.
-        final Stream<Class<?>> classStream =
-                getStream(iterable).filter(Objects::nonNull).map(Object::getClass);
+        return getStream(value.asIterable())
+                .filter(Objects::nonNull)
+                .map(StratifierUtils::toClassName)
+                .toList();
+    }
 
-        return classStream.toList();
+    private static String toClassName(Object object) {
+        return object instanceof ClassInstance classInstance
+                ? toSimpleClassName(classInstance)
+                : object.getClass().getName();
+    }
+
+    private static String toSimpleClassName(ClassInstance classInstance) {
+        final Object fhirFromClassInstance = convertToFhirR4IfNeeded(classInstance);
+        return fhirFromClassInstance.getClass().getName();
     }
 
     private static Stream<?> getStream(Iterable<?> iterable) {
